Fix up User Profile page: squish avatar components back together, get rid of floating toggle

--- a/src/views/User/User.styl
+++ b/src/views/User/User.styl
@@ -292,7 +292,7 @@
         min-width: 20rem;
         flex: 0;
         padding-right: 0.5rem;
-        justify-content: space-between;
+        justify-content: center;
     }
     .ratings-container {
         display: flex;
